// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card #1 renders 1`] = `
<styled.figure
  className="card-wrapper"
  style={
    Object {
      "backgroundImage": "url('data:image/svg+xml,%3Csvg%20width%3D%2242%22%20height%3D%2244%22%20viewBox%3D%220%200%2042%2044%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%200h42v44H0V0zm1%201h40v20H1V1zM0%2023h20v20H0V23zm22%200h20v20H22V23z%22%20fill%3D%22%23eaeaea%22%20fill-opacity%3D%220.6%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E')",
      "fontFamily": "Inter",
    }
  }
  theme={
    Object {
      "theme": "light",
    }
  }
>
  <styled.div
    className="card-logo-wrapper"
  >
    <i
      className="devicon-github-original colored"
    />
  </styled.div>
  <styled.p
    className="card-name-wrapper"
    style={
      Object {
        "fontSize": "40px",
      }
    }
  >
    <span
      className="card-name-owner"
    />
    <span
      className="card-name-name"
    >
      project_name
    </span>
  </styled.p>
</styled.figure>
`;

exports[`Card #2 renders 1`] = `
<styled.figure
  className="card-wrapper"
  style={
    Object {
      "backgroundImage": "url('data:image/svg+xml,%3Csvg%20width%3D%2242%22%20height%3D%2244%22%20viewBox%3D%220%200%2042%2044%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%200h42v44H0V0zm1%201h40v20H1V1zM0%2023h20v20H0V23zm22%200h20v20H22V23z%22%20fill%3D%22%23eaeaea%22%20fill-opacity%3D%220.2%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E')",
      "fontFamily": "KoHo",
    }
  }
  theme={
    Object {
      "theme": "dark",
    }
  }
>
  <styled.div
    className="card-logo-wrapper"
  >
    <img
      alt="Custom logo"
      src="data:image/gif;base64,R0lGODlhAQABAAAAACw="
    />
    <span
      className="card-logo-divider"
    >
      +
    </span>
    <i
      className="devicon-javascript-plain "
    />
  </styled.div>
  <styled.p
    className="card-name-wrapper"
    style={
      Object {
        "fontSize": "40px",
      }
    }
  >
    <span
      className="card-name-owner"
    >
      owner/
    </span>
    <span
      className="card-name-name"
    >
      project_name
    </span>
  </styled.p>
  <styled.p
    className="card-description-wrapper"
  >
    TEST DESCRIPTION
  </styled.p>
  <styled.div
    className="card-badges-wrapper"
  >
    <Badge
      color="#dfb317"
      name="stars"
      value="1"
    />
    <Badge
      color="#97ca00"
      name="forks"
      value="2"
    />
    <Badge
      color="#007ec6"
      name="issues"
      value="3"
    />
    <Badge
      color="#fe7d37"
      name="pulls"
      value="4"
    />
  </styled.div>
</styled.figure>
`;
